--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
    <title>ttttt</title>
 </head>
 <body>
-   <div>ncncmjdkdkd</div>
+   <div class="container">
+      <div class="container__item">ncncmjdkdkd</div>
+      <div class="container__item">djsdkndsf</div>
+   </div>
 </body>
 </html>
