--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
    <div class="container">
-      <div class="container__item">ncncmjdkdkd</div>
+      <div class="container__item">
+         htyfft6t6t6t6
+      </div>
       <div class="container__item">djsdkndsf</div>
+      <div class="container__item">
+         htyfft6t6t6t6
+      </div>
    </div>
 </body>
 </html>
