--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
       <div class="container__item">ncncmjdkdkd</div>
       <div class="container__item">djsdkndsf</div>
    </div>
+   <script></script>
 </body>
 </html>
