--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
    <div class="container">
       <div class="container__item">
-         htyfft6t6t6t6
+         1
       </div>
-      <div class="container__item">djsdkndsf</div>
+      <div class="container__item">2</div>
       <div class="container__item">
-         htyfft6t6t6t6
+         3
       </div>
    </div>
    <script></script>
