--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <div class="container__item">
          1
       </div>
-      <div class="container__item">2</div>
+      <div class="container__item">
+         2
+      </div>
       <div class="container__item">
          3
       </div>
