--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       <div class="container__item">
          3
       </div>
+      <div class="container__item">
+         4
+      </div>
    </div>
    <script></script>
 </body>
